# clawhub-mirror

./: .gitignore  CLAUDE.md  Dockerfile  PLAN.md  README.md  config.example.yaml  docker-compose.yml  pyproject.toml
backend/: handler.py  requirements-dev.txt  requirements.txt
backend/app/: auth.py  config.py  dynamodb.py  main.py  schemas.py  storage.py  upstream.py
backend/app/routers/: admin.py  auth.py  discovery.py  skills.py  whoami.py
backend/tests/: conftest.py  test_admin.py  test_auth.py  test_discovery.py  test_skills.py  test_whoami.py
docs/: api-reference.md  comparison.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: main.tsx  styles.css
frontend/src/components/: Footer.test.tsx  Footer.tsx  Header.tsx  InstallCommand.test.tsx  InstallCommand.tsx  Layout.tsx  SkillCard.test.tsx  SkillCard.tsx  SkillStats.test.tsx  SkillStats.tsx
frontend/src/lib/: api.test.ts  api.ts  theme.test.ts  theme.ts
frontend/src/routes/: Admin.tsx  ApiReference.tsx  Guide.tsx  Home.tsx  Publish.tsx  Search.tsx  Settings.tsx  SkillDetail.tsx  Skills.tsx
scripts/: build-lambda.sh  seed.py
src/clawhub_mirror/: __init__.py  auth.py  config.py  database.py  main.py  models.py  proxy.py  schemas.py  storage.py
terraform/: api_gateway.tf  backend.tf.example  cdn.tf  dynamodb.tf  frontend.tf  lambda.tf  main.tf  outputs.tf  s3.tf  seed.tf  variables.tf
tests/: conftest.py  test_admin.py  test_discovery.py  test_frontend.py  test_live_api.py  test_proxy.py  test_skills.py
(+5 files in other folders)
